`PlayerSave` with `writeString`